<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    tools:context=".activities.PayPalActivity">

    <TextView
        android:id="@+id/postIdBox2"
        android:layout_width="380dp"
        android:layout_height="20dp"
        android:layout_marginBottom="500dp"
        android:gravity="bottom|center"
        android:textColor="#7C8584"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHourlyAmount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/temporaryVariable2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/temporaryVariable3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVStatus"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/temporaryVariable4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVStatus"
        app:layout_constraintVertical_bias="0.379" />

    <TextView
        android:id="@+id/temporaryVariable5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVStatus"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btnLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtHourlyAmount"
        android:layout_centerInParent="true"
        android:layout_marginBottom="164dp"
        android:backgroundTint="#BAA287"
        android:text="@string/leave_a_review"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVStatus"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="241dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:inputType="none"
        android:padding="10dp"
        android:text="@string/close_posting"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/edtHoursAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <EditText
        android:id="@+id/edtHoursAmount"
        android:layout_width="333dp"
        android:layout_height="55dp"
        android:hint="@string/number_of_hours_worked"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnPayNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <EditText
        android:id="@+id/edtHourlyAmount"
        android:layout_width="333dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hourly_wage"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnPayNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHoursAmount"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailOfEmployee"
        android:layout_width="333dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:hint="@string/email_of_worm_for_hire"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVStatus" />

    <Button
        android:id="@+id/btnPayNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtHourlyAmount"
        android:layout_centerInParent="true"
        android:layout_marginBottom="320dp"
        android:backgroundTint="#BAA287"
        android:inputType="none"
        android:text="@string/verify_worm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idTVStatus"
        android:layout_width="316dp"
        android:layout_height="153dp"
        android:layout_below="@id/btnPayNow"
        android:layout_marginBottom="236dp"
        android:inputType="none"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grandTotal" />

    <TextView
        android:id="@+id/grandTotal"
        android:layout_width="282dp"
        android:layout_height="106dp"
        android:layout_below="@id/btnPayNow"
        android:inputType="none"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnPayNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHourlyAmount" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backBut"
        android:layout_width="58dp"
        android:layout_height="61dp"
        android:backgroundTint="#BDD4F1"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        android:inputType="none"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:inputType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVStatus"
        app:layout_constraintVertical_bias="0.888"
        app:srcCompat="@drawable/paypal" />

    <TextView
        android:id="@+id/paymentStatus"
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:layout_marginBottom="172dp"
        android:inputType="none"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPayNow"
        app:layout_constraintVertical_bias="0.875" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="true"
        android:progressBackgroundTint="#7C8584"
        android:progressTint="#D4AF37"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLeaveReview"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/employeeVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/verified_worm_for_hire"
        android:textColor="#4CAF50"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnLeaveReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVStatus"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/temporaryVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.771" />


</androidx.constraintlayout.widget.ConstraintLayout>