...
    <string name="INVALID_DURATION">Duration (hours) should be greater than 0.</string>
    <string name="INVALID_PLACE">Invalid Place.</string>
    <string name="INVALID_SALARY">Salary should be greater than or equal to 5 CAD.</string>
    <string name="INVALID_EMPLOYEE">This email isn\'t linked to any known Worm.</string>
    <string name="EMPTY_STRING"></string>
    <string name="Profile">Profile</string>
    <string name="INVALID_HOURLY">Hourly wage should be greater than 0.</string>
    <string name="INVALID_HOURS">Hours worked should be greater than 0.</string>
    <string name="don_t_worry_you_can_always_come_back_and_change_this_later">Don\'t worry, you can always come back and change this later.</string>
    <string name="INVALID_EMAIL">Invalid Email.</string>
    <string name="INVALID_PASSWORD">Invalid Password.</string>
    <string name="INVALID_CREDENTIALS">Incorrect Email or Password.</string>
    <string name="INVALID_FULL_NAME">Invalid Name.</string>
    <string name="INVALID_CONTACT">Invalid Contact.</string>
...
